# Vulkan-C

./: CMakeLists.txt  CMakeLists_for_linux.txt  README.md  main.c
cglm/: aabb2d.h  box.h  common.h  io.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  plane.h  quat.h  ray.h  struct.h  vec2.h  vec3.h  vec4.h  version.h
cglm/call/: mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  quat.h  ray.h  vec2.h  vec3.h  vec4.h
cglm/simd/: intrin.h  x86.h
cglm/struct/: aabb2d.h  box.h  ivec2.h  ivec3.h  ivec4.h  mat2.h  mat2x3.h  mat2x4.h  mat3.h  mat3x2.h  mat3x4.h  mat4.h  mat4x2.h  mat4x3.h  quat.h  ray.h  vec2.h  vec3.h  vec4.h
models/: viking_room.mtl
shaders/: shader.frag  shader.vert
